# QuackDBG

./: Cargo.toml  README.md
gdbmi/: Cargo.toml  build.rs
gdbmi/src/: lib.rs  parser.rs  quoted_string.rs
quackdbg/: Cargo.toml
quackdbg/src/: context.rs  main.rs
quackdbg/src/debugger/: breakpoint.rs  mod.rs
quackdbg/src/debugger/gdb/: mod.rs
quackdbg/src/gui/: colors.rs  main_window.rs  mod.rs  support.rs
quackdbg/src/gui/widgets/: console.rs  hello.rs  mod.rs
