[package]
name = "quackdbg"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5"
color-eyre = "0.6.1"
crossbeam = "0.8.1"
env_logger = "0.9.0"
gdbmi = { path = "../gdbmi" }
glium = { version = "0.30", default-features = true }
image = "0.23"
imgui = { version = "0.8.2", features = ["tables-api"] }
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"
log = "0.4.17"

[build-dependencies]
toml = "0.5.9"
